[package]
name = "dns-resolver"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
rand = "0.9.2"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio-test = "0.4"

