[package]
name = "gossip-membership"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gossip-membership"
path = "src/main.rs"

[lib]
name = "gossip_membership"
path = "src/lib.rs"

[dependencies]
tokio      = { version = "1", features = ["full"] }
log        = "0.4"
env_logger = "0.11"
clap       = { version = "4", features = ["derive"] }
futures = "0.3.32"
