[package]
name = "gossip-membership"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gossip-membership"
path = "src/main.rs"

[lib]
name = "gossip_membership"
path = "src/lib.rs"

[features]
otel = ["opentelemetry-otlp"]

[dependencies]
tokio      = { version = "1", features = ["full"] }
log        = "0.4"
env_logger = "0.11"
clap       = { version = "4", features = ["derive"] }
futures = "0.3.32"
chacha20poly1305 = "0.10"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry-otlp = { version = "0.14", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "protocol_bench"
harness = false
